--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -13,9 +13,10 @@ jobs:
         id: cache
         uses: actions/cache@v3
         with:
-          path: ~/.npm
+          path: node_modules
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
       - name: Lint code
         run: npm run lint
@@ -28,10 +29,10 @@ jobs:
         id: cache
         uses: actions/cache@v3
         with:
-          path: ~/.npm
+          path: node_modules
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
-        run: npm ci
+        if: steps.cache.outputs.cache-hit != 'true'
       - name: Test code
         id: run-tests
         run: npm run test
@@ -51,10 +52,10 @@ jobs:
         id: cache
         uses: actions/cache@v3
         with:
-          path: ~/.npm
+          path: node_modules
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
-        run: npm ci
+        if: steps.cache.outputs.cache-hit != 'true'
       - name: Build website
         id: build-website
         run: npm run build
@@ -78,7 +79,7 @@ jobs:
   report:
     needs: [lint, deploy]
     if: failure()
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Output information
         run: |
