add more combinations

--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -7,6 +7,12 @@ jobs:
       matrix:
         node-versions: [12, 14, 16]
         operating-systems: [ubuntu-latest, windows-latest]
+        include:
+          - node-version: 18
+            operating-system: ubuntu-latest
+        exclude:
+          - node-version: 12
+            operating-system: windows-latest
     runs-on: ${{ matrix.operating-systems }}
     steps:
       - name: Get Code
