--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -8,11 +8,11 @@ jobs:
         node-versions: [12, 14, 16]
         operating-systems: [ubuntu-latest, windows-latest]
         include:
-          - node-version: 18
-            operating-system: ubuntu-latest
+          - node-versions: 18
+            operating-systems: ubuntu-latest
         exclude:
-          - node-version: 12
-            operating-system: windows-latest
+          - node-versions: 12
+            operating-systems: windows-latest
     runs-on: ${{ matrix.operating-systems }}
     steps:
       - name: Get Code
